# backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
apps/api/: apps.py
apps/api/v1/: urls.py
apps/api/v1/attributes/: schema.py  serializers.py  views.py
apps/api/v1/events/: filters.py  schema.py  serializers.py  views.py
apps/api/v1/specialists/: filters.py  schema.py  serializers.py  views.py
apps/api/v1/users/: schema.py  serializers.py  views.py
apps/attributes/: admin.py  crud.py  models.py
apps/attributes/migrations/: 0001_initial.py  0002_upload_attributes.py  0004_eventstatus_role_tag.py  0005_delete_theme.py  0006_upload_tags_roles_status.py
apps/core/: models.py  utils.py
apps/events/: admin.py  crud.py  models.py  services.py
apps/events/migrations/: 0001_initial.py  0002_alter_event_options_participant.py  0002_create_types.py  0003_event_registered.py
apps/services/: api_github.py
apps/specialists/: admin.py  apps.py  crud.py  models.py  services.py
apps/specialists/migrations/: 0001_initial.py  0002_alter_specialist_options_specialist_first_name_and_more.py  0003_specialist_company.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
deploy/: docker-compose.yml
static/fixtures/: cities.csv  event_tags.csv  event_types.csv  events.csv  fixtures.xlsx  grades.csv  jobs.csv  participants.csv  roles.csv  spec_tools.csv  specialists.csv  status.csv  tags.csv  themes.csv  tools.csv
